--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Red Hat Display',
         sans-serif;
     min-height: 100vh;
-    background-image: "images\pattern-background-desktop.svg";
+    background-image: url("images\pattern-background-desktop.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(225, 100%, 94%);
@@ -115,7 +115,7 @@ a.cancel-btn:hover {
 
 @media only screen and (max-width: 425px) {
     body {
-        background-image: "images\pattern-background-mobile.svg";
+        background-image: url("images\pattern-background-mobile.svg");
         font-size: 14px;
     }
 
